<resources>
    <string name="app_name">legendary News</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_article">create article</string>
    <string name="publish">publish</string>
    <string name="delete">delete</string>
    <string name="article_title">Article Title</string>
    <string name="article_body">Article Body</string>
    <string name="error">Error</string>
    <string name="send_for_publishing">send for publishing</string>
    <string name="empty_fields_error">please fill in all the fields first.</string>
    <string name="by_author_name">By %s</string>
    <string name="article_sent">Article Sent For publication.</string>
    <string name="empty_article_fields">An article needs to have both a body and a title to be ready for publication.</string>
    <string name="loren_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="publish_article_success">Article Published Successfully.</string>
    <string name="publish_article_failure">Error publishing article, please try again later!</string>
    <string name="delete_article_success">Article deleted Successfully.</string>
    <string name="delete_article_failure">Error deleting article, please try again later!</string>
</resources>